--- a/style.css
+++ b/style.css
@@ -489,6 +489,7 @@ a button:hover {
         width: 64px; /* Adjust width */
         margin-left: auto; /* Push the toggle switch to the end */
         /* No need for visibility control */
+        position: absolute;
     }
 
     .social-media-container {
