--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@ a button:hover {
     }
 
     .sticky-bar {
-        position: fixed; /* Fix the navbar to the top of the screen */
+        position: sticky; /* Fix the navbar to the top of the screen */
         top: 0;
         left: 0;
         width: 100%; /* Full width of the screen */
